--- a/index.html
+++ b/index.html
@@ -20,31 +20,35 @@
 
 	<script>
 	window.$docsify = {
-		name: 'autoHeaders',
-		repo: 'https://github.com/markbattistella/docsify-autoHeaders',
+		// name: 'autoHeaders',
+		// repo: 'https://github.com/markbattistella/docsify-autoHeaders',
 		coverpage: 'site/cover.md',
 		homepage: 'site/home.md',
-		loadSidebar: false,
-		hideSidebar: true,
+		// loadSidebar: false,
+		// hideSidebar: true,
 		auto2top: true,
 		notFoundPage: 'site/404.md',
 		relativePath: false,
 		themeColor: 'var(--mb-theme-01)',
 		formatUpdated: '{DD}/{MM}/{YYYY} {HH}:{mm}',
-		autoFooter: {
-			name:			'@markbattistella',
-			url:			'https://github.com/markbattistella',
-			copyYear:		'2013',
-			policy:			'site/policy',
-			terms:			'site/terms',
-			cookies:		'site/cookies',
-			onBody:			true
-		},
+		// autoFooter: {
+		// 	name:			'@markbattistella',
+		// 	url:			'https://github.com/markbattistella',
+		// 	copyYear:		'2013',
+		// 	policy:			'site/policy',
+		// 	terms:			'site/terms',
+		// 	cookies:		'site/cookies',
+		// 	onBody:			true
+		// },
 
 		// plugin - autoHeaders
 		autoHeaders: {
 			separator:	'decimal',
-			levels:		'6',
+			// levels:		'6',
+            levels:     {
+                start:  '1',
+                finish: '4'
+            },
 			scope:		'#main',
 			debug:		true
 		}
@@ -55,10 +59,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 
 	<!-- docsify-autoHeaders -->
-	<script src="https://unpkg.com/@markbattistella/docsify-autoheaders@latest"></script>
+	<!-- <script src="https://unpkg.com/@markbattistella/docsify-autoheaders@latest"></script> -->
+    <script src="docsify-autoHeaders.js"></script>
 
 	<!-- mbSidebarFooter -->
-	<script src="https://cdn.jsdelivr.net/npm/@markbattistella/docsify-sidebarfooter"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/@markbattistella/docsify-sidebarfooter"></script> -->
 
 </body>
 </html>
